<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="horizontal"
    android:padding="4dp"
    android:background="@color/white"
    android:weightSum="1">

    <!-- Image view for displaying receipt image -->
    <ImageView
        android:id="@+id/receiptPhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:contentDescription="@string/receipt_photo"
        android:scaleType="centerCrop" />

    <!-- Vertical LinearLayout for text views -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <!-- Text view for displaying store name -->
        <TextView
            android:id="@+id/storeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:lines="1"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@string/store_name"
            android:textSize="12sp"
            android:textStyle="bold"
            android:ellipsize="end" />

        <!-- Text view for displaying receipt date -->
        <TextView
            android:id="@+id/receiptDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:lines="1"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@string/date_of_receipt"
            android:textSize="12sp"
            android:ellipsize="end" />

        <!-- Text view for displaying total amount -->
        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:padding="4dp"
            android:text="@string/total_amount"
            android:textSize="12sp"
            android:ellipsize="end" />

    </LinearLayout>
</LinearLayout>
