<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboardFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- SearchView below the Toolbar -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/searchview_background"
        android:padding="8dp"
        app:autoShowKeyboard="true"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search"
        app:searchIcon="@null" />

    <!-- Upload Button below the SearchView -->
    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/searchView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <!-- "List of Receipts" TextView below the Upload Button -->
    <TextView
        android:id="@+id/textViewListHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonUpload"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/list_of_receipt"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReceipts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewListHeader"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        tools:listitem="@layout/receipt_item" />


</RelativeLayout>
