<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ReceiptDetailFragment">

        <!-- image view for displaying receipt image-->
        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/receiptPhoto"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/receipt_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- text view for displaying store name-->
        <TextView
            android:id="@+id/storeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:lines="1"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@string/store_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receiptPhoto" />

        <!-- text view for displaying date of the receipt-->
        <TextView
            android:id="@+id/receiptDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:lines="1"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@string/receipt_date"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storeName" />

        <!-- text view for displaying total amount-->
        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:lines="1"
            android:maxLines="1"
            android:padding="4dp"
            android:text="@string/total_amount"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receiptDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
